--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "final-form": "^4.18.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-final-form": "^6.3.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
