--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "history": "^4.10.1",
     "moment": "^2.24.0",
     "react": "^16.9.0",
+    "react-date-picker": "^7.8.2",
     "react-dom": "^16.9.0",
     "react-final-form": "^6.3.0",
     "react-redux": "^7.1.1",
